# curator

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml
docs/: design.md
scripts/: env  review  review-dryrun
src/curator/: __init__.py  catalog.py  checksums.py  cli.py  dedupe.py  dryrun.py  ingest.py  metadata.py  organize.py  paths.py  place_identification.py  plan.py  progress.py  review_ui.py  safety.py  scan.py  verification.py
src/curator/prompts/: prompt_001_identify_place.txt  prompt_002_identify_country_for_album.txt  prompt_003_identify_countries_for_albums.txt
tests/: helpers.py  test_catalog.py  test_cli.py  test_dedupe.py  test_dryrun.py  test_ingest.py  test_metadata.py  test_organize.py  test_place_identification.py  test_plan.py  test_progress.py  test_review_ui.py  test_safety.py  test_verification.py
