[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "curator"
version = "0.1.0"
description = "Power-user photo and video file management CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
curator = "curator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
